# mecagent-technical

./: .gitignore  01-ExploreCADDataset.ipynb  02-EvaluateExistingSolution.ipynb  03-Gemma3_4B_Vision.ipynb  GETTING_STARTED.md  README.md  evaluate_predictions.py  predict.py  pyproject.toml  tox.ini  train.py  train_modular.py
llm_output/: mecagents_model_imp.json  mecagents_model_lora.json  syntax_rate_results_imp.json  syntax_rate_results_lora.json
mecagents/: README.md  __init__.py  config.py  data.py  inference.py  model.py  training.py  utils.py
metrics/: best_iou.py  valid_syntax_rate.py
